--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/lib/sudoku-core.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
